Readability issues are resolved

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -174,13 +174,6 @@ footer {
   cursor: pointer;
 }
 
-header nav ul {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  list-style: none;
-}
-
 @media screen and (max-width: 768px) {
   #menu-icon {
     display: block;
